--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 system/storage/cache/
 system/storage/logs/
 vqmod/logs/
-vqmod/mods.cache
-vqmod/vqcache
+vqmod/vqcache/
+vqmod/checked.cache
 vqmod/mods.cache
 
-vqmod/checked.cache
