--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ system/storage/cache/
 system/storage/logs/
 vqmod/logs/
 vqmod/mods.cache
-vqmod/vqcache
+vqmod/vqcache/
 vqmod/mods.cache
 
 vqmod/checked.cache
